--- a/src/main/resources/assets/specialnetherite/lang/en_gb.json
+++ b/src/main/resources/assets/specialnetherite/lang/en_gb.json
@@ -9,6 +9,10 @@
 	"item.specialnetherite.strong_netherite_shovel": "Strong Netherite Shovel",
 	"item.specialnetherite.strong_netherite_hoe": "Strong Netherite Hoe",
 	
+	"block.specialnetherite.enchanted_crystal_ore": "Tin Ore",	
+	"item.specialnetherite.raw_tin": "Raw Tin",
+	"item.specialnetherite.tin_ingot": "Tin Ingot",
+	
 	"item.specialnetherite.enchanted_netherite_sword": "Enchanted Netherite Sword",
 	"item.specialnetherite.enchanted_netherite_pickaxe": "Enchanted Netherite Pickaxe",
 	"item.specialnetherite.enchanted_netherite_axe": "Enchanted Netherite Axe",
@@ -33,7 +37,8 @@
 	"item.specialnetherite.knockback_resistance_crystal_shard": "Knockback Resistance Crystal Shard",
 	"block.specialnetherite.knockback_resistance_crystal_ore": "Knockback Resistance Crystal Ore",
 	
-	"itemgroup.specialnetherite.crystals": "Crystals",
-	"itemgroup.specialnetherite.ctools": "Tools"
+	"itemGroup.specialnetherite.crystals": "Crystals",
+	"itemGroup.specialnetherite.tools": "Tools",
+	"itemGroup.specialnetherite.ores": "Ores"
 
 }
