--- a/src/main/resources/assets/specialnetherite/lang/en_us.json
+++ b/src/main/resources/assets/specialnetherite/lang/en_us.json
@@ -2,41 +2,45 @@
 	"item.specialnetherite.defence_crystal": "Defence Crystal",
 	"item.specialnetherite.defence_crystal_shard": "Defence Crystal Shard",
 	"block.specialnetherite.defence_crystal_ore": "Defence Crystal Ore",
-	
+
 	"item.specialnetherite.strong_netherite_sword": "Strong Netherite Sword",
 	"item.specialnetherite.strong_netherite_pickaxe": "Strong Netherite Pickaxe",
 	"item.specialnetherite.strong_netherite_axe": "Strong Netherite Axe",
 	"item.specialnetherite.strong_netherite_shovel": "Strong Netherite Shovel",
 	"item.specialnetherite.strong_netherite_hoe": "Strong Netherite Hoe",
-	
-	"block.specialnetherite.enchanted_crystal_ore": "Tin Ore",	
+
+	"block.specialnetherite.tin_block": "Tin Block",
+	"block.specialnetherite.bronze_block": "Bronze Block",
+	"block.specialnetherite.tin_ore": "Tin Ore",
 	"item.specialnetherite.raw_tin": "Raw Tin",
 	"item.specialnetherite.tin_ingot": "Tin Ingot",
-	
+	"item.specialnetherite.raw_bronze": "Raw Bronze",
+	"item.specialnetherite.bronze_ingot": "Bronze Ingot",
+
 	"item.specialnetherite.enchanted_netherite_sword": "Enchanted Netherite Sword",
 	"item.specialnetherite.enchanted_netherite_pickaxe": "Enchanted Netherite Pickaxe",
 	"item.specialnetherite.enchanted_netherite_axe": "Enchanted Netherite Axe",
 	"item.specialnetherite.enchanted_netherite_shovel": "Enchanted Netherite Shovel",
-	"item.specialnetherite.enchanted_netherite_hoe": "Enchanted Netherite Hoe",	
-	
+	"item.specialnetherite.enchanted_netherite_hoe": "Enchanted Netherite Hoe",
+
 	"item.specialnetherite.strong_crystal_shard": "Strong Crystal Shard",
 	"item.specialnetherite.strong_crystal": "Strong Crystal",
 	"block.specialnetherite.strong_crystal_ore": "Strong Crystal Ore",
-	
+
 	"item.specialnetherite.enchanted_crystal": "Enchanted Crystal",
 	"item.specialnetherite.enchanted_crystal_shard": "Enchanted Crystal Shard",
-	"block.specialnetherite.enchanted_crystal_ore": "Enchanted Crystal Ore",	
+	"block.specialnetherite.enchanted_crystal_ore": "Enchanted Crystal Ore",
 
 	"item.specialnetherite.sharp_netherite_axe": "Sharpened Netherite Axe",
-	"item.specialnetherite.sharp_netherite_sword": "Sharpened Netherite Sword",	
+	"item.specialnetherite.sharp_netherite_sword": "Sharpened Netherite Sword",
 	"item.specialnetherite.sharp_crystal": "Sharp Crystal",
 	"item.specialnetherite.sharp_crystal_shard": "Sharp Crystal Shard",
-	"block.specialnetherite.sharp_crystal_ore": "Sharp Crystal Ore",	
-	
+	"block.specialnetherite.sharp_crystal_ore": "Sharp Crystal Ore",
+
 	"item.specialnetherite.knockback_resistance_crystal": "Knockback Resistance Crystal Shard",
 	"item.specialnetherite.knockback_resistance_crystal_shard": "Knockback Resistance Crystal Shard",
 	"block.specialnetherite.knockback_resistance_crystal_ore": "Knockback Resistance Crystal Ore",
-	
+
 	"itemGroup.specialnetherite.crystals": "Crystals",
 	"itemGroup.specialnetherite.tools": "Tools",
 	"itemGroup.specialnetherite.ores": "Ores"
