Added the features for V0.4

--- a/src/main/resources/assets/specialnetherite/lang/en_us.json
+++ b/src/main/resources/assets/specialnetherite/lang/en_us.json
@@ -10,6 +10,7 @@
 	"block.specialnetherite.tin_block": "Tin Block",
 	"block.specialnetherite.bronze_block": "Bronze Block",
 	"block.specialnetherite.tin_ore": "Tin Ore",
+	"block.specialnetherite.deepslate_tin_ore": "Deepslate Tin Ore",
 	"item.specialnetherite.raw_tin": "Raw Tin",
 	"item.specialnetherite.tin_ingot": "Tin Ingot",
 	"item.specialnetherite.raw_bronze": "Raw Bronze",
@@ -40,12 +41,37 @@
 	"item.specialnetherite.end_crystal_shard": "End Crystal Shard",
 	"block.specialnetherite.end_crystal_ore": "End Crystal Ore",
 	"item.specialnetherite.cereal": "Cereal",
-	"item.specialnetherite.knockback_resistance_crystal": "Knockback Resistance Crystal Shard",
-	"item.specialnetherite.knockback_resistance_crystal_shard": "Knockback Resistance Crystal Shard",
-	"block.specialnetherite.knockback_resistance_crystal_ore": "Knockback Resistance Crystal Ore",
 	"itemGroup.specialnetherite.crystals": "Crystals",
 	"itemGroup.specialnetherite.tools": "Tools",
 	"itemGroup.specialnetherite.ores": "Ores",
-	"biome.specialnetherite.crystal_biome": "Crystal Biome"
+	"biome.specialnetherite.crystal_biome": "Crystal Biome",
+	"item.specialnetherite.overworld_crystal": "Overworld Crystal",
+	"item.specialnetherite.overworld_crystal_shard": "Overworld Crystal Shard",
+	"item.specialnetherite.overworld_netherite_sword": "Overworld Netherite Sword",
+	"item.specialnetherite.overworld_netherite_pickaxe": "Overworld Netherite Pickaxe",
+	"item.specialnetherite.overworld_netherite_axe": "Overworld Netherite Axe",
+	"item.specialnetherite.overworld_netherite_shovel": "Overworld Netherite Shovel",
+	"item.specialnetherite.overworld_netherite_hoe": "Overworld Netherite Hoe",
+	"item.specialnetherite.nether_netherite_sword": "Nether Netherite Sword",
+	"item.specialnetherite.nether_netherite_pickaxe": "Nether Netherite Pickaxe",
+	"item.specialnetherite.nether_netherite_axe": "Nether Netherite Axe",
+	"item.specialnetherite.nether_netherite_shovel": "Nether Netherite Shovel",
+	"item.specialnetherite.nether_netherite_hoe": "Nether Netherite Hoe",
+	"item.specialnetherite.end_netherite_sword": "End Netherite Sword",
+	"item.specialnetherite.end_netherite_pickaxe": "End Netherite Pickaxe",
+	"item.specialnetherite.end_netherite_axe": "End Netherite Axe",
+	"item.specialnetherite.end_netherite_shovel": "End Netherite Shovel",
+	"item.specialnetherite.end_netherite_hoe": "End Netherite Hoe",
+	"item.specialnetherite.overworld_netherite_helmet": "Overworld Netherite Helmet",
+	"item.specialnetherite.overworld_netherite_chestplate": "Overworld Netherite Chestplate",
+	"item.specialnetherite.overworld_netherite_leggings": "Overworld Netherite Leggings",
+	"item.specialnetherite.overworld_netherite_boots": "Overworld Netherite Boots",
+	"item.specialnetherite.nether_netherite_helmet": "Nether Netherite Helmet",
+	"item.specialnetherite.nether_netherite_chestplate": "Nether Netherite Chestplate",
+	"item.specialnetherite.nether_netherite_leggings": "Nether Netherite Leggings",
+	"item.specialnetherite.nether_netherite_boots": "Nether Netherite Boots",
+	"item.specialnetherite.end_netherite_helmet": "End Netherite Helmet",
+	"item.specialnetherite.end_netherite_chestplate": "End Netherite Chestplate",
+	"item.specialnetherite.end_netherite_leggings": "End Netherite Leggings",
+	"item.specialnetherite.end_netherite_boots": "End Netherite Boots"
 }
-
